--- a/index.css
+++ b/index.css
@@ -60,14 +60,28 @@ li {
 a {
     color: #30C6B4 
 }
-h1{
+#m-heading{
     display: inline;
     cursor: pointer;
+    width: 99%;
+    height: 100%;
+    float: left;
 }
-h1:hover{
+#m-heading:hover{
     color: #30C6B4;
     transition: all;
     transition-duration: 500ms;
 }
-
+.first{
+    width: 100%;
+    height: 50px;
+}
+#img-f{
+    width: 1%;
+    height: 100%;
+    float: left;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
 
